// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Markdown> inject a <Text> property 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "flex-start",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
      },
      Array [],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    bold={false}
    ellipsizeMode="tail"
    italic={false}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 18,
        },
        false,
        Object {},
      ]
    }
  >
    Hello 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    bold={false}
    ellipsizeMode="tail"
    italic={Object {}}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 18,
        },
        false,
        Object {},
      ]
    }
  >
    World 
  </Text>
</View>
`;

exports[`<Markdown> renders 1`] = `
<View
  style={Array []}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  />
</View>
`;

exports[`<Markdown> when combining * & ** 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "flex-start",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
      },
      Array [],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    bold={false}
    ellipsizeMode="tail"
    italic={false}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    hello 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    bold={false}
    ellipsizeMode="tail"
    italic={Object {}}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    world, I'm 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    bold={Object {}}
    ellipsizeMode="tail"
    italic={false}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    javi. 
  </Text>
</View>
`;

exports[`<Markdown> when including * 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "flex-start",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
      },
      Array [],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    bold={false}
    ellipsizeMode="tail"
    italic={false}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    hello 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    bold={false}
    ellipsizeMode="tail"
    italic={Object {}}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    world 
  </Text>
</View>
`;

exports[`<Markdown> when including ** 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "flex-start",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
      },
      Array [],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    bold={false}
    ellipsizeMode="tail"
    italic={false}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    hello 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    bold={Object {}}
    ellipsizeMode="tail"
    italic={false}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    world 
  </Text>
</View>
`;

exports[`<Markdown> when simple text 1`] = `
<View
  style={Array []}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 30,
        },
        false,
        Object {},
      ]
    }
  >
    Hello World
  </Text>
</View>
`;
